Modify DataCenter,ViewController 1.Caffe 구조체에 sizeUp 프로퍼티 추가 2.Navigation bar 'Back'글씨안보이게 3.장바구니 체크박스 수정

--- a/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
+++ b/SmartOrder/SmartOrder/Base.lproj/Main.storyboard
@@ -731,5 +731,5 @@
         <image name="유저소" width="30" height="34"/>
         <image name="핸드폰50" width="144" height="144"/>
     </resources>
-    <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+    <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
 </document>
