--- a/SmartOrder/SmartOrder/Order/Order.storyboard
+++ b/SmartOrder/SmartOrder/Order/Order.storyboard
@@ -74,10 +74,24 @@
                                                         <action selector="amountPlus:" destination="vqN-Zj-Q7r" eventType="touchUpInside" id="I5G-34-LDw"/>
                                                     </connections>
                                                 </button>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="like" translatesAutoresizingMaskIntoConstraints="NO" id="DV8-Ev-qbK">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Unlike" translatesAutoresizingMaskIntoConstraints="NO" id="DV8-Ev-qbK">
                                                     <rect key="frame" x="364" y="11" width="39" height="38"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlW-PH-ElO">
+                                                    <rect key="frame" x="173" y="49" width="120" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ex1-fJ-nK3">
+                                                    <rect key="frame" x="360" y="8" width="46" height="41"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <connections>
+                                                        <action selector="onClikLikeBtn:" destination="vqN-Zj-Q7r" eventType="touchUpInside" id="Rsj-lp-grV"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -103,6 +117,9 @@
                                                         <segment title="Large"/>
                                                     </segments>
                                                     <color key="tintColor" red="0.28061923379999998" green="0.49708396199999999" blue="0.96871286629999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <connections>
+                                                        <action selector="selectedSize:" destination="vqN-Zj-Q7r" eventType="valueChanged" id="Uuz-QZ-5na"/>
+                                                    </connections>
                                                 </segmentedControl>
                                             </subviews>
                                             <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -244,12 +261,15 @@
                         <outlet property="coffeeName" destination="8h4-3t-OuX" id="5CA-CE-lGw"/>
                         <outlet property="coffeeSize" destination="lS5-2x-VaY" id="f2b-GH-px3"/>
                         <outlet property="ice" destination="QoJ-XS-AtM" id="2T3-5z-lTY"/>
+                        <outlet property="ifLarge" destination="hlW-PH-ElO" id="MTJ-fJ-ZjX"/>
+                        <outlet property="like" destination="DV8-Ev-qbK" id="JxV-ue-R7W"/>
                         <outlet property="price" destination="S0y-sI-Frk" id="MSK-ut-FyB"/>
                         <outlet property="resultPrice" destination="KFD-cx-wUC" id="gi8-hE-cRm"/>
                         <outlet property="shot" destination="df7-eI-S6e" id="zec-Pz-eBm"/>
                         <outlet property="shotDecrease" destination="8NX-d6-DHA" id="T0D-Ki-8Vk"/>
                         <outlet property="shotIncrease" destination="bKd-EC-Gwo" id="CtE-12-2Wn"/>
                         <outlet property="shotTit" destination="0HP-sX-ha6" id="CMH-R9-KsN"/>
+                        <outlet property="sizeOption" destination="lS5-2x-VaY" id="vAW-3n-OGf"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xl6-13-52b" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -266,6 +286,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="like" width="150" height="134"/>
+        <image name="Unlike" width="150" height="134"/>
     </resources>
 </document>
